--- a/meettheteam.html
+++ b/meettheteam.html
@@ -128,9 +128,8 @@
                        <h4><b>Why Judo?</b></h4>
                        <p>
                         <ol>
-                            <li>Judo provides confidence and discipline, but it does not involve hitting or kicking like other martial arts like Karate                                 and TaeKwonDo. Being in control, rather than being the strongest, is what judo is all about. Judo is all about leveraging                                 your opponent's moves against them, even when size and power are helpful.
-                              For various people, judo means different meanings. It is an enjoyable sport, an art, a discipline, a social and leisure                                   activity, a fitness regimen, a way to defend oneself and engage in conflict, and a way of life. It combines all of these                                   things.
-                             </li>
+                            <li> For various people, judo means different meanings. It is an enjoyable sport, an art, a discipline, a social and leisure                                    activity, a fitness regimen, a way to defend oneself and engage in conflict, and a way of life. It combines all of these                                  things.
+                            </li>
                        </ol>
                        
                       </p>
