--- a/meettheteam.html
+++ b/meettheteam.html
@@ -128,7 +128,7 @@
                        <h4><b>Why Judo?</b></h4>
                        <p>
                         <ol>
-                            <li> For various people, judo has different meanings. It is an enjoyable sport, an art, a discipline, a social and leisure                                    activity, a fitness regimen, a way to defend oneself and engage in conflict, and a way of life. It combines all of these                                  things.
+                            <li> For various people, judo has different meanings. It is an enjoyable sport, an art, a discipline, a social and leisure                                    activity, a fitness regimen, a means of self-defense, and a way of life. It combines all of these things.
                             </li>
                        </ol>
                        
