--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Est. 2022</h2>
                       <p class="people__desc">Address: 44 Salmon Blvd Campbellton, NB E3N 3T7
-			      <a href="photosvideos.html">see photos</a></p>
+			      <a href="https://goo.gl/maps/Awc5UfAsaySFEben8">Get directions</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Our Dojo</h2>
