--- a/meettheteam.html
+++ b/meettheteam.html
@@ -21,8 +21,8 @@
                  <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
                      <li><a href="meettheteam.html">About</a></li>
-                     <li><a href="membership.html">Programs</a></li>
-                     <li><a href="photosvideos.html">Photos/Videos</a></li>
+                     <li><a href="membership.html">Schedule</a></li>
+                     <li><a href="photosvideos.html">Media</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                                                                <div id="google_translate_element"></div><script type="text/javascript">
                       function googleTranslateElementInit() {
