--- a/payment.html
+++ b/payment.html
@@ -128,7 +128,7 @@
                 <a href="https://square.link/u/KV67C4Qy" target="_blank">Pay now</a></p>
                 </div>
                 <div class="people__div people__div--name">
-                    <h2 class="people-name">JudoNB/CAD</h2>
+                    <h2 class="people-name">JudoNB/CAN</h2>
                 </div>
             </div>    
 		  <!--TRY-->
