--- a/maxraym.html
+++ b/maxraym.html
@@ -89,11 +89,11 @@
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2009, 2010 and 2011: Pedro Judo Challenge- Bronze Medal, GOLD & 5th- Boston, USA<</span>
+                     		 <span>2009, 2010 and 2011: Pedro Judo Challenge- Bronze Medal, GOLD & 5th- Boston, USA</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2009, 2010, 2011, 2012 and 2013: Champion in Eastern Canada/span>
+                     		 <span>2009, 2010, 2011, 2012 and 2013: Champion in Eastern Canada</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
