--- a/payment.html
+++ b/payment.html
@@ -125,7 +125,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Annual membership</h2>
                     <p class="people__desc"> $61.59
-                <a href="https://square.link/u/KV67C4Qy" target="_blank">Pay now</a></p>
+                <a href="https://square.link/u/jZ3MNIf8" target="_blank">Pay now</a></p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">JudoNB/CAN</h2>
