--- a/payment.html
+++ b/payment.html
@@ -65,9 +65,11 @@
                       <img src="Photos/pexels-cottonbro-studio-7990073.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Winter/Hiver 2023</h2>
-                      <p class="people__desc"> January-April(4 months)-$164.94
+                      <h2 class="people__name">2023 season</h2>
+                      <p class="people__desc"> Winter block-$164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a></p>
+			  <p class="people__desc"> Annualy-$329.58
+			      <a href="https://square.link/u/eyOb18BT" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Tiny Tots</h2>
