--- a/payment.html
+++ b/payment.html
@@ -68,7 +68,7 @@
                       <h2 class="people__name">2023 season</h2>
                       <p class="people__desc"> Winter block-$164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a></p>
-			 <br> <p class="people__desc"> Annualy-$329.58
+			 <br> <p class="people__desc"> Annually-$329.58
 			      <a href="https://square.link/u/eyOb18BT" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
@@ -81,10 +81,12 @@
                     <img src="Photos/pexels-cottonbro-studio-7988827.jpg" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">Winter/Hiver 2023</h2>
-                    <p class="people__desc"> January-April(4 months)-$195.81
+                    <h2 class="people__name">2023 season</h2>
+                    <p class="people__desc"> Winter block-$195.81
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     </p>
+			<br> <p class="people__desc"> Annually-$391.32
+			      <a href="https://square.link/u/wGl04UXj" target="_blank">Pay now</a></p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Kinder Judo</h2>
@@ -96,9 +98,12 @@
                       <img src="Photos/pexels-rodnae-productions-7045729.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Winter/Hiver 2023</h2>
-                      <p class="people__desc">January-April(4 months)-$257.55
+                      <h2 class="people__name">2023 season</h2>
+                      <p class="people__desc">Winter block-$257.55
                         <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
+                      </p>
+			 <br><p class="people__desc">Annualy-$514.8
+                        <a href="https://square.link/u/Agq25e66" target="_blank">Pay now</a>
                       </p>
                   </div>
                   <div class="people__div people__div--name">
@@ -111,9 +116,12 @@
                     <img src="Photos/pexels-kampus-production-6765029.jpg" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">Winter/Hiver 2023</h2>
-                    <p class="people__desc"> January-April(4 months)-$257.55
+                    <h2 class="people__name">2023 season</h2>
+                    <p class="people__desc"> Winter block-$257.55
                 <a href="https://square.link/u/6MgAv1Gz" target="_blank">Pay now</a></p>
+			 <br><p class="people__desc">Annually-$514.8
+                        <a href="https://square.link/u/FU1HjkGm" target="_blank">Pay now</a>
+                      </p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Adult Judo</h2>
