--- a/payment.html
+++ b/payment.html
@@ -68,7 +68,7 @@
                       <h2 class="people__name">2023 season</h2>
                       <p class="people__desc"> Winter block-$164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a></p>
-			 <br> <p class="people__desc"> Annual-$329.58
+			 <br> <p class="people__desc"> <strong>ON SALE</strong>: Annual-$329.58
 			      <a href="https://square.link/u/eyOb18BT" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
