--- a/payment.html
+++ b/payment.html
@@ -85,8 +85,8 @@
                     <p class="people__desc"> Winter block-$195.81
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     </p>
-			<br> <p class="people__desc"> <span class="red"><strong>ON SALE</strong></span>: Annual-$391.32
-			      <a href="https://square.link/u/wGl04UXj" target="_blank">Pay now</a></p>
+			<br> <p class="people__desc"> <span class="red"><strong>ON SALE</strong></span>: Annual-$355.3
+			      <a href="https://square.link/u/0pgoLPvz" target="_blank">Pay now</a></p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Kinder Judo</h2>
@@ -119,8 +119,8 @@
                     <h2 class="people__name">2023 season</h2>
                     <p class="people__desc"> Winter block-$257.55
                 <a href="https://square.link/u/6MgAv1Gz" target="_blank">Pay now</a></p>
-			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual-$514.8
-                        <a href="https://square.link/u/FU1HjkGm" target="_blank">Pay now</a>
+			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual-$450
+                        <a href="https://square.link/u/24IGjZLz" target="_blank">Pay now</a>
                       </p>
                 </div>
                 <div class="people__div people__div--name">
