--- a/payment.html
+++ b/payment.html
@@ -119,8 +119,8 @@
                     <h2 class="people__name">2023 season</h2>
                     <p class="people__desc"> Winter block-$257.55
                 <a href="https://square.link/u/6MgAv1Gz" target="_blank">Pay now</a></p>
-			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual-$450
-                        <a href="https://square.link/u/24IGjZLz" target="_blank">Pay now</a>
+			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual-$463.35
+                        <a href="https://square.link/u/rcIXyFLi" target="_blank">Pay now</a>
                       </p>
                 </div>
                 <div class="people__div people__div--name">
