--- a/payment.html
+++ b/payment.html
@@ -68,8 +68,8 @@
                       <h2 class="people__name">2023 season</h2>
                       <p class="people__desc"> Winter block-$164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a></p>
-			  <br> <p class="people__desc"> <span class="red"><strong>ON SALE</strong></span>: Annual-$329.58
-			      <a href="https://square.link/u/eyOb18BT" target="_blank">Pay now</a></p>
+			  <br> <p class="people__desc"> <span class="red"><strong>ON SALE</strong></span>: Annual-$298.71
+			      <a href="https://square.link/u/L9LPgmhF" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Tiny Tots</h2>
