--- a/payment.html
+++ b/payment.html
@@ -102,8 +102,8 @@
                       <p class="people__desc">Winter block-$257.55
                         <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
                       </p>
-			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual-$514.8
-                        <a href="https://square.link/u/Agq25e66" target="_blank">Pay now</a>
+			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual-$463.35
+                        <a href="https://square.link/u/tcLMU7vD" target="_blank">Pay now</a>
                       </p>
                   </div>
                   <div class="people__div people__div--name">
