--- a/payment.html
+++ b/payment.html
@@ -66,9 +66,9 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc"> Winter block:$164.94
-			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a></p>
-			 <p class="people__desc"> <span class="red"><strong>ON SALE</strong></span>: Annual:$298.71
+                      <p class="people__desc"> Winter block: $164.94
+			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
+			 <span class="red"><strong>ON SALE</strong></span>: Annual: $298.71
 			      <a href="https://square.link/u/L9LPgmhF" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
