--- a/payment.html
+++ b/payment.html
@@ -82,10 +82,10 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2023 season</h2>
-                    <p class="people__desc"> Winter block:$195.81
+                    <p class="people__desc"> Winter block: $195.81
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
-                    </p>
-			<br> <p class="people__desc"> <span class="red"><strong>ON SALE</strong></span>: Annual:$355.3
+                    
+			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <a href="https://square.link/u/0pgoLPvz" target="_blank">Pay now</a></p>
                 </div>
                 <div class="people__div people__div--name">
@@ -99,10 +99,10 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc">Winter block:$257.55
+                      <p class="people__desc">Winter block: $257.55
                         <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
-                      </p>
-			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual:$463.35
+                      
+			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
                         <a href="https://square.link/u/tcLMU7vD" target="_blank">Pay now</a>
                       </p>
                   </div>
@@ -117,9 +117,9 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2023 season</h2>
-                    <p class="people__desc"> Winter block:$257.55
-                <a href="https://square.link/u/6MgAv1Gz" target="_blank">Pay now</a></p>
-			 <br><p class="people__desc"><span class="red"><strong>ON SALE</strong></span>: Annual:$463.35
+                    <p class="people__desc"> Winter block: $257.55
+                <a href="https://square.link/u/6MgAv1Gz" target="_blank">Pay now</a>
+			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
                         <a href="https://square.link/u/rcIXyFLi" target="_blank">Pay now</a>
                       </p>
                 </div>
