--- a/payment.html
+++ b/payment.html
@@ -103,7 +103,7 @@
                         <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
-                        <a href="https://square.link/u/tcLMU7vD" target="_blank">Pay now</a>
+                        <a href="https://square.link/u/xhOEmpcS" target="_blank">Pay now</a>
                       </p>
                   </div>
                   <div class="people__div people__div--name">
