--- a/payment.html
+++ b/payment.html
@@ -120,7 +120,7 @@
                     <p class="people__desc"> Winter block: $257.55
                 <a href="https://square.link/u/6MgAv1Gz" target="_blank">Pay now</a>
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
-                        <a href="https://square.link/u/rcIXyFLi" target="_blank">Pay now</a>
+                        <a href="https://square.link/u/fSAUdgRh" target="_blank">Pay now</a>
                       </p>
                 </div>
                 <div class="people__div people__div--name">
