--- a/payment.html
+++ b/payment.html
@@ -86,7 +86,7 @@
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/0pgoLPvz" target="_blank">Pay now</a></p>
+			      <a href="https://square.link/u/ITi22NJX" target="_blank">Pay now</a></p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Kinder Judo</h2>
