--- a/payment.html
+++ b/payment.html
@@ -69,7 +69,7 @@
                       <p class="people__desc"> Winter block: $164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
 			 <span class="red"><strong>ON SALE</strong></span>: Annual: $298.71
-			      <a href="https://square.link/u/L9LPgmhF" target="_blank">Pay now</a></p>
+			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Tiny Tots</h2>
