--- a/meettheteam.html
+++ b/meettheteam.html
@@ -22,7 +22,7 @@
                      <li><a href="index.html">Home</a></li>
                      <li><a href="meettheteam.html">About</a></li>
                      <li><a href="membership.html">Schedule</a></li>
-                     <li><a href="payments.html">Registration</a></li>
+                     <li><a href="payment.html">Registration</a></li>
                      <li><a href="photosvideos.html">Media</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                                                                <div id="google_translate_element"></div><script type="text/javascript">
