--- a/payment.html
+++ b/payment.html
@@ -55,7 +55,7 @@
                         <!--New content-->
 
    <div class="pen-info">
-              <h1 class="pen-info__title">Membership(Square fees added)</h1>
+              <h1 class="pen-info__title">Membership</h1>
           </div>
       
           <div class="demo">
