--- a/payment.html
+++ b/payment.html
@@ -56,6 +56,7 @@
 
    <div class="pen-info">
               <h1 class="pen-info__title">Membership</h1>
+	   <h1 style="font-size: 1rem">(Please note that there is a 2.9%+0.30¢ processing fee included in our prices)</h1>
           </div>
       
           <div class="demo">
