--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5>REGISTRATION COMING SOON</h5>
+                <h5>REGISTRATION OPEN!</h5>
               </div>
             <!--BOX END-->
 		
