--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <!--New content-->
 
    <div class="pen-info">
-              <h1 class="pen-info__title">WINTER- 2023</h1>
+              <h1 class="pen-info__title"><!--TEXT HERE--></h1>
           </div>
       
           <div class="demo">
