--- a/form.html
+++ b/form.html
@@ -49,7 +49,7 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-jog4O28Jk_7wdyVar1WFLS3wWiBT_Fur0es-xHNDfI582A/viewform?embedded=true" width="640" height="2594" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-jog4O28Jk_7wdyVar1WFLS3wWiBT_Fur0es-xHNDfI582A/viewform?embedded=true" width="100%" height="2594" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
            
         </div>
     </div>
