--- a/formfrancais.html
+++ b/formfrancais.html
@@ -49,7 +49,7 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJdwD5z7iNVowlfa3eEBGvWbwT319zLq4A15p7pPnSs92emQ/viewform?embedded=true" width="640" height="2717" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJdwD5z7iNVowlfa3eEBGvWbwT319zLq4A15p7pPnSs92emQ/viewform?embedded=true" width="100%" height="2717" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
            
         </div>
     </div>
