--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
-                      <p class="people__desc">To be determined</p>
+                      <p class="people__desc">First class on January 8th, 2023</p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Events</h2>
