--- a/photosvideos.html
+++ b/photosvideos.html
@@ -54,11 +54,11 @@
             <div class="gallery">
 
                 <div class="gallery-item">
-                    <img class="gallery-image" src="https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?w=500&h=500&fit=crop" alt="person writing in a notebook beside by an iPad, laptop, printed photos, spectacles, and a cup of coffee on a saucer">
+                    <img class="gallery-image" src="Photos/sensei1.jpg" alt="Sensei Megan">
                 </div>
         
                 <div class="gallery-item">
-                    <img class="gallery-image" src="https://images.unsplash.com/photo-1515260268569-9271009adfdb?w=500&h=500&fit=crop" alt="sunset behind San Francisco city skyline">
+                    <img class="gallery-image" src="Photos/sensei2.jpg" alt="Sensei Maxime">
                 </div>
         
                 <div class="gallery-item">
