--- a/form.html
+++ b/form.html
@@ -32,9 +32,7 @@
                       }
                       </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                  </ul>
-                     <h1 class="logo"> <a class="social-icon" href="https://www.facebook.com/profile.php?id=100087614255385" target="_blank">
-                      <ion-icon name="logo-facebook"></ion-icon>
-                    </a>Restigouche Dojo</h1>
+                     <h1 class="logo">Restigouche Dojo</h1>
                 </div>
             </nav>
     </div>
