--- a/meettheteam.html
+++ b/meettheteam.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maple Judo</title>
+    <title>Restigouche Dojo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
 </head>
@@ -31,9 +31,7 @@
                       }
                       </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                  </ul>
-                     <h1 class="logo"> <a class="social-icon" href="https://www.facebook.com/profile.php?id=100087614255385" target="_blank">
-                      <ion-icon name="logo-facebook"></ion-icon>
-                    </a>Restigouche Dojo</h1>
+                     <h1 class="logo">Restigouche Dojo</h1>
                 </div>
             </nav>
     </div>
