--- a/payment.html
+++ b/payment.html
@@ -166,7 +166,7 @@
                         <a href="https://square.link/u/XXvy7Jbg" target="_blank">Pay now</a>
                 </div>
                 <div class="people__div people__div--name">
-                    <h2 class="people-name">BJJNB/JJBNB</h2>
+                    <h2 class="people-name">BJJNB</h2>
                 </div>
             </div>    
 		  
