--- a/payment.html
+++ b/payment.html
@@ -109,7 +109,7 @@
                       <h2 class="people-name">Youth Judo</h2>
                   </div>
               </div>   
-              
+     <!--Adult classes removed for this season
               <div class="demo__div people">
                 <div class="people__div people__div--img">
                     <img src="Photos/pexels-kampus-production-6765029.jpg" alt="" class="people__img">
@@ -126,7 +126,7 @@
                     <h2 class="people-name">Adult Judo</h2>
                 </div>
             </div>    
-
+      -->
             <div class="demo__div people">
                 <div class="people__div people__div--img">
                     <img src="Photos/vrmmTANI_400x400 (1).jpg" alt="" class="people__img">
