--- a/membership.html
+++ b/membership.html
@@ -55,7 +55,7 @@
                 <!--New content-->
                 
                <div class="calendar">
-                 <img src="Photos/schedule2023.png" alt="Calendar2023" width="80%">
+                 <img src="Photos/schedule2023judobjj.png" alt="Calendar2023" width="80%">
                 </div>
 
                 <!--New content end-->
