--- a/adultejjbformulaire.html
+++ b/adultejjbformulaire.html
@@ -49,7 +49,7 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccQT0W1D_hN42mDswz66EPfdVUPYwatLoRsBcMCWMDanxNZQ/viewform?embedded=true" width="640" height="2423" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccQT0W1D_hN42mDswz66EPfdVUPYwatLoRsBcMCWMDanxNZQ/viewform?embedded=true" width="100%" height="2423" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
            
         </div>
     </div>
