--- a/Adultbjjform.html
+++ b/Adultbjjform.html
@@ -49,7 +49,7 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPkTpA0-brMeerom9QwqmHdm1_ICGom1TYBa5WeD1We6fLwg/viewform?embedded=true" width="640" height="2324" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPkTpA0-brMeerom9QwqmHdm1_ICGom1TYBa5WeD1We6fLwg/viewform?embedded=true" width="100%" height="2324" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
            
         </div>
     </div>
