--- a/enfantjjbformulaire.html
+++ b/enfantjjbformulaire.html
@@ -49,7 +49,7 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe5-w9FNP2Df_09uDHmljMfnaVsEZvPuq0jGC64aqD5G-F1DA/viewform?embedded=true" width="640" height="3034" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe5-w9FNP2Df_09uDHmljMfnaVsEZvPuq0jGC64aqD5G-F1DA/viewform?embedded=true" width="100%" height="3034" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
            
         </div>
     </div>
