--- a/payment.html
+++ b/payment.html
@@ -147,7 +147,7 @@
                       <img src="Photos/BJJ1.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Monthly fee</h2>
+                      <h2 class="people__name">Monthly fee(13+ years old)</h2>
                       <p class="people__desc"> Monthly: $62.04
 			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
                   </div>
