--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
-                      <p class="people__desc">First class on January 8th, 2023</p>
+                      <p class="people__desc">
+			  <ul>
+				  <li>First class on January 8th, 2023</li>
+				  <li>Women self-defense program</li>
+			  </ul>
+				  </p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Events</h2>
