--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
 			  <ul>
-				  <li>First class on January 8th, 2023</li>
-				  <li>Women self-defense program</li>
+				  <li>&nbsp; First class on January 8th, 2023</li>
+				  <li>&nbsp; Women self-defense program</li>
 			  </ul>
 				  </p>
                   </div>
