--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
-			  <ul>
-				  <li>&nbsp; First class on January 8th, 2023</li>
-				  <li>&nbsp; Women self-defense program</li>
+			  &nbsp <ul>
+				  <li> First class on January 8th, 2023</li>
+				  <li> Women self-defense program</li>
 			  </ul>
 				  </p>
                   </div>
