--- a/payment.html
+++ b/payment.html
@@ -65,13 +65,13 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc"> Winter block: $164.94
+                      <p class="people__desc"> Winter block(full): $164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
 			 <span class="red"><strong>ON SALE</strong></span>: Annual: $298.71
 			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a></p>
                   </div>
                   <div class="people__div people__div--name">
-                      <h2 class="people-name">Tiny Tots(CLASS FULL)</h2>
+                      <h2 class="people-name">Tiny Tots</h2>
                   </div>
               </div>          
       
