--- a/payment.html
+++ b/payment.html
@@ -54,7 +54,7 @@
 
    <div class="pen-info">
               <h1 class="pen-info__title">Membership</h1>
-	   <h1 style="font-size: 1rem">(Please note that there is a 2.9%+0.30¢ processing fee included in our prices)</h1><br>***All members must register with Judo NB/Canada or BJJNB accordingly prior to beginning classes***<br>**No Refunds**
+	   <h1 style="font-size: 1rem">(Please note that there is a 2.9%+0.30¢ processing fee included in our prices)</h1><br>***All members must register with Judo NB/Canada or BJJNB accordingly prior to beginning classes***<br>**Membership fees are non-refundable.**
           </div>
       
           <div class="demo">
