--- a/payment.html
+++ b/payment.html
@@ -152,7 +152,7 @@
 			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
                   </div>
                   <div class="people__div people__div--name">
-                      <h2 class="people-name">BJJ-Judo</h2>
+                      <h2 class="people-name">BJJ</h2>
                   </div>
               </div>          
       
