--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -6,7 +6,7 @@
     <title>Women's Self Defense Course at Restigouche Dojo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
-    <link href="/css/alternativestyle.css" rel="stylesheet">
+    <link href="alternativestyle.css" rel="stylesheet">
 
 </head>
 <body>
