--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -63,6 +63,10 @@
                 <p id="enroll-message">Enroll now and take the first step towards feeling confident and secure!
                 </p>
                 <button id="enroll-btn">Enroll</button>
+                <button id="disclaimer-btn">Disclaimer</button>
+                    <div id="disclaimer-message">
+                    <p>Please note that while this course</p>
+
                 </div>
                 </div>
                 
