--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -65,7 +65,7 @@
                 <button id="enroll-btn">Enroll</button>
                 <button id="disclaimer-btn">Disclaimer</button>
                     <div id="disclaimer-message">
-                    <p>Please note that while this course</p>
+                    <p>This course is not a guarantee of safety. Participants should stay vigilant, avoid dangerous situations, and use self-defense techniques as a last resort.</p>
 
                 </div>
                 </div>
