--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -54,12 +54,11 @@
                 <h1 id="title">Women's Self Defense Course</h1>
                 <div class="container">
                 <div class="details">
-                <p id="welcome-message">Welcome to the Women's Self Defense course at Restigouche Dojo!
+                <p id="welcome-message">Welcome to the Women's Self Defense workshop at Restigouche Dojo!
                 </p>
-                <p id="program-description">This course is designed to empower women with the skills and
-                knowledge to defend themselves and get away from potentially dangerous situations. Our experienced
-                instructors will guide you through 4 weeks of instruction, one time per week for 60 minutes each. By the end of the course, you will have the
-                confidence and skills to protect yourself and stay safe in a variety of scenarios</p>
+                <p id="program-description">Our workshop focuses on creating a safe space for women by equipping them with the tools they need to defend themselves in a way that prioritizes their safety and well-being. Whether you're a seasoned athlete or a beginner, our experienced instructors will work with you to develop the skills you need to feel empowered and confident.
+
+We understand the importance of feeling secure in your daily life, which is why we are committed to providing a supportive and inclusive environment for all participants. Our program is not about promoting aggression or violence, but rather about instilling a sense of confidence and control.</p>
                 <p id="enroll-message">Enroll now and take the first step towards feeling confident and secure!
                 </p>
                 <button id="enroll-btn">Enroll</button>
