--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women's Self Defense Course at Restigouche Dojo</title>
+    <title>Women's Self Defense Workshop at Restigouche Dojo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle.css" rel="stylesheet">
@@ -51,7 +51,7 @@
                 <option value="en">English</option>
                 <option value="fr">Français</option>
                 </select>
-                <h1 id="title">Women's Self Defense Course</h1>
+                <h1 id="title">Women's Self Defense Workshop</h1>
                 <div class="container">
                 <div class="details">
                 <p id="welcome-message">Welcome to the Women's Self Defense workshop at Restigouche Dojo!
@@ -64,7 +64,7 @@ We understand the importance of feeling secure in your daily life, which is why 
                 <button id="enroll-btn">Enroll</button>
                 <button id="disclaimer-btn">Disclaimer</button>
                     <div id="disclaimer-message">
-                    <p>This course is not a guarantee of safety. Participants should stay vigilant, avoid dangerous situations, and use self-defense techniques as a last resort.</p>
+                    <p>This workshop is not a guarantee of safety. Participants should stay vigilant, avoid dangerous situations, and use self-defense techniques as a last resort.</p>
 
                 </div>
                 </div>
