--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -75,6 +75,9 @@ We understand the importance of feeling secure in your daily life, which is why 
         </div>
     </div>
 
+            <footer>
+      <p>&copy; 2023 Restigouche Dojo</p>
+    </footer>
     
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
