--- a/tinytotsinfo.html
+++ b/tinytotsinfo.html
@@ -6,7 +6,7 @@
     <title>Tiny tots Judo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
-    <link href="alternativestyle.css" rel="stylesheet">
+    <link href="alternativestyle2.css" rel="stylesheet">
 
 </head>
 <body>
