--- a/payment.html
+++ b/payment.html
@@ -70,7 +70,7 @@
 			 <span class="red"><strong>ON SALE</strong></span>: Annual: $298.71
 			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
 			      
-			    <a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info/a>
+			    <a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info</a>
 			  </p>
 			 
                   </div>
