--- a/payment.html
+++ b/payment.html
@@ -89,7 +89,9 @@
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/ITi22NJX" target="_blank">Pay now</a></p>
+			      <a href="https://square.link/u/ITi22NJX" target="_blank">Pay now</a>
+			<a href="https://restigouchedojo.com/kinderjudoinfo.html" target="_blank">Program info</a>
+			</p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Kinder Judo</h2>
