--- a/payment.html
+++ b/payment.html
@@ -142,7 +142,6 @@
                     <h2 class="people__name">Annual membership</h2>
                     <p class="people__desc"> $62.04
                 <a href="https://square.link/u/Vyo6ryns" target="_blank">Pay now</a>
-			<a href="https://restigouchedojo.com/bjjinfo.html" target="_blank">Program info</a>
 			</p>
                 </div>
                 <div class="people__div people__div--name">
@@ -158,7 +157,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Monthly(13+ Y.O.)</h2>
                       <p class="people__desc"> Monthly: $62.04
-			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
+			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a>
+			  <a href="https://restigouchedojo.com/bjjinfo.html" target="_blank">Program info</a>
+			  </p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">BJJ</h2>
