--- a/kinderjudoinfo.html
+++ b/kinderjudoinfo.html
@@ -89,7 +89,8 @@
         </div>
     </div>
 
-    
+    <div class="icons8-credit"><a target="_blank" href="https://icons8.com/">Icons by Icons8</a></div>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
