--- a/youthjudoinfo.html
+++ b/youthjudoinfo.html
@@ -80,6 +80,7 @@
               
 
 
+<div class="icons8-credit"><a target="_blank" href="https://icons8.com/">Icons by Icons8</a></div>
 
                 </div>
                 </div>
