--- a/bjjinfo.html
+++ b/bjjinfo.html
@@ -77,6 +77,7 @@
       </div>
     </section>
 
+<div class="icons8-credit"><a target="_blank" href="https://icons8.com/">Icons by Icons8</a></div>
 
                 </div>
                 </div>
