--- a/youthjudoinfo.html
+++ b/youthjudoinfo.html
@@ -54,7 +54,7 @@
                   <p>Youth Judo is a martial art and physical activity designed for children aged 7-12. It teaches fundamental techniques and concepts of Judo, while also promoting physical fitness, coordination, and social skills in a fun and supportive environment.</p>
                   <p>At Restigouche Dojo, our Youth Judo classes are taught by experienced instructors who specialize in working with children. Our curriculum is designed to teach children standing and ground techniques (ne waza and tachi waza), grappling (randori), breakfalls, and the values of Judo, in a safe and supportive environment. We also focus on important life skills such as discipline, respect, and teamwork.</p>
                   <p>We believe that Youth Judo is a valuable tool for helping children develop physically, mentally, and socially. All of our instructors have been certified through Judo Canada and adhere to a strict code of conduct.</p>
-                  <a href="#" class="cta-button">Join Us Today</a>
+                  <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
                 </div>
               <section class="features">
                 <div class="container">
