--- a/tinytotsinfo.html
+++ b/tinytotsinfo.html
@@ -52,7 +52,7 @@
       <div class="container">
         <h2>Tiny Tots Judo Classes</h2>
         <p>Our Tiny Tots group is a "parent and me" class where one parent or caregiver will join their little one on the mats. During the 45-minute class, you can expect a warm-up, games, obstacle courses, partner activities with your child, introduction to Judo techniques, and breakfalls. This is a great opportunity for you to bond with your child while also introducing them to a healthy and active environment.</p>
-        <a href="#" class="cta-button">Join Us Today</a>
+        <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
       </div>
     </section>
     <section class="features">
