--- a/kinderjudoinfo.html
+++ b/kinderjudoinfo.html
@@ -54,7 +54,7 @@
                   <p>Kinder Judo is a martial art and physical activity designed for children ages 5-6. It teaches fundamental techniques and concepts of Judo, while also promoting physical fitness, coordination, and social skills in a fun and supportive environment.</p>
                   <p>At Restigouche Dojo, our Kinder Judo classes are taught by experienced instructors who specialize in working with young children. Our curriculum is designed to teach children basic Judo movements, such as falls, throws, and holds, in a safe and supportive environment. We also focus on important life skills such as discipline, respect, and teamwork.</p>
                   <p>We believe that Kinder Judo is a valuable tool for helping children develop physically, mentally, and socially. All of our instructors have been certified through Judo Canada and adhere to a strict code of conduct.</p>
-                  <a href="#" class="cta-button">Join Us Today</a>
+                  <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
                 </div>
               <section class="features">
                 <div class="container">
