--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -61,7 +61,8 @@
 We understand the importance of feeling secure in your daily life, which is why we are committed to providing a supportive and inclusive environment for all participants. Our program is not about promoting aggression or violence, but rather about instilling a sense of confidence and control.</p>
                 <p id="enroll-message">Enroll now and take the first step towards feeling confident and secure!
                 </p>
-                <button id="enroll-btn">Enroll</button>
+                <button id="enroll-btn"> <a href="https://square.link/u/WWQU0vII">Enroll</a></button>
+                    
                 <button id="disclaimer-btn">Disclaimer</button>
                     <div id="disclaimer-message">
                     <p>This workshop is not a guarantee of safety. Participants should stay vigilant, avoid dangerous situations, and use self-defense techniques as a last resort.</p>
