--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women's Self Defense Workshop at Restigouche Dojo</title>
+    <title>Women's Self-Defense Workshop at Restigouche Dojo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle.css" rel="stylesheet">
@@ -51,10 +51,10 @@
                 <option value="en">English</option>
                 <option value="fr">Français</option>
                 </select>
-                <h1 id="title">Women's Self Defense Workshop</h1>
+                <h1 id="title">Women's Self-Defense Workshop</h1>
                 <div class="container">
                 <div class="details">
-                <p id="welcome-message">Welcome to the Women's Self Defense workshop at Restigouche Dojo!
+                <p id="welcome-message">Welcome to the Women's Self-Defense workshop at Restigouche Dojo!
                 </p>
                 <p id="program-description">Our workshop focuses on creating a safe space for women by equipping them with the tools they need to defend themselves in a way that prioritizes their safety and well-being. Whether you're a seasoned athlete or a beginner, our experienced instructors will work with you to develop the skills you need to feel empowered and confident.
 
