--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
-                      <p class="people__desc"> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defence workshop</a></p>
+                      <p class="people__desc"> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense workshop</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Events</h2>
