--- a/blog1.html
+++ b/blog1.html
@@ -49,9 +49,11 @@
         <div class="wrapper-body">
             
             <div class="text-container">
-  <h1>My Title</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec sem euismod, fringilla velit id, interdum metus. Fusce blandit vestibulum dignissim. Proin finibus vel nisl quis mattis. Sed consectetur ac lectus id iaculis. Nulla vel semper metus, eget bibendum dolor. Integer nec velit euismod, molestie lacus vel, vehicula metus. Sed maximus, purus in consequat efficitur, nulla mauris pretium tellus, ut fringilla purus urna ut massa.</p>
-  <p>Phasellus euismod ullamcorper neque, ac efficitur lectus volutpat non. Duis finibus, enim in lobortis hendrerit, lacus risus hendrerit nunc, ut lacinia libero metus id mi. Nunc sed metus rhoncus, finibus nulla eu, imperdiet risus. Donec rhoncus elit ac urna malesuada sagittis. Nullam vehicula leo eu risus efficitur, ut aliquam lacus pharetra. Suspendisse potenti. In quis nulla in magna iaculis iaculis.</p>
+  <h1>Maxime Raymond</h1>
+  <p>Looking to take your martial arts skills to the next level? Look no further than Restigouche Dojo! Our accomplished instructor, Maxime Raymond, brings over 15 years of experience on the provincial team of Judo New Brunswick, as well as extensive training at the National Training Centre in Montreal where he had the privilege of training with Olympic athletes and honing his Judo skills to an elite level.</p>
+  <p>Maxime's achievements include winning multiple international medals, representing Canada at the Francophone Games in Nice, France, and Near East, Lebanon, and being a member of the Pan-Am National Team in the Republic of El Salvador. He has also won the President Pitney Bowes Sports NB Sports Award and was named Best Overall Canadian Athlete by Judo Canada in 2007.</p>
+  <p>Maxime's skillset extends beyond Judo, as he has had the privilege of training in the birthplace of Brazilian Jiu-Jitsu (BJJ), Brazil, on multiple occasions. While he trained in BJJ for several years under the guidance of Rodrigo Resende, a 5th-degree black belt in both Judo and BJJ, Maxime also trained at local clubs in Brazil, where he had the opportunity to experience different training styles and techniques. This extensive training with elite martial artists, both with Rodrigo and in Brazil, has provided him with an in-depth understanding of various martial arts disciplines. Maxime is passionate about sharing his knowledge with his students at Restigouche Dojo, and his well-rounded skillset makes him a versatile and valuable martial artist.</p>
+   <p>Join us today and train with one of the best in the business! </p>
 </div>
         </div>
     </div>
