--- a/meettheteam.html
+++ b/meettheteam.html
@@ -76,7 +76,7 @@
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
                         Judo black belt and Brazilian Jiu Jitsu purple belt. NCCP# 1073218 
-                      <a href="maxraym.html">see more</a> 
+                      <a href="achievementsmax.html">see more</a> 
                     </p>
                 </div>
                 <div class="people__div people__div--name">
