--- a/meettheteam.html
+++ b/meettheteam.html
@@ -61,7 +61,7 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Megan Raymond</h2>
                       <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
-                          <a href="megnag.html">see more</a></p>
+                          <a href="achievementsmeg.html">see more</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Megan Raymond</h2>
