--- a/photosvideos.html
+++ b/photosvideos.html
@@ -59,11 +59,11 @@
                     <img class="gallery-image" src="Photos/sensei2.jpg" alt="Sensei Maxime">
                 </div>
                 
-        <!--COMING SOON 
-                <div class="gallery-item">
-                    <img class="gallery-image" src="https://images.unsplash.com/photo-1514041181368-bca62cceffcd?w=500&h=500&fit=crop" alt="car interior from central back seat position showing driver and blurred view through windscreen of a busy road at night">
-                </div>
         
+                <div class="gallery-item">
+                    <img class="gallery-image" src="Photos/selfdefense.jpg" alt="Women Self-Defense Workshop">
+                </div>
+        <!--COMING SOON 
                 <div class="gallery-item">
                     <img class="gallery-image" src="https://images.unsplash.com/photo-1445810694374-0a94739e4a03?w=500&h=500&fit=crop" alt="back view of woman wearing a backpack and beanie waiting to cross the road on a busy street at night in New York City, USA">
                 </div>
